[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "billrosetta-moss-bridge"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "verify_*.py"]
markers = [
    "integration: live network tests (require API tokens; skipped by default)",
]
addopts = "-m 'not integration'"
